# fdmss

./: CMakeLists.txt  Makefile  config.xml
include/: AccuracyOrder.h  Area3d.h  BoundaryArea3d.h  CmdLineParameters.h  Codegen.h  CrtFuncX.h  CrtFuncY.h  CrtFuncZ.h  EnvCaseGenerator.h  FbcOverdozenMicroperm.h  FreeArea3d.h  HorseBCOverdozenMicroperm.h  InputParameters.h  MouseFuncX.h  MouseFuncY.h  MouseFuncZ.h  NfbcOverdozenMicroperm.h  OverdozenMicroperm.h  OverdozenPermsolver.h  PbcOverdozenMicroperm.h  PeriodicArea3d.h  Polynom.h  Slau.h  StuffedVoxel.h  stdafx.h
src/: AntiMain.cpp  CMakeLists.txt  Codegen.cpp  CrtFuncX.cpp  CrtFuncY.cpp  CrtFuncZ.cpp  EnvCaseGenerator.cpp  FbcOverdozenMicroperm.cpp  HorseBCOverdozenMicroperm.cpp  InputParameters.cpp  Main.cpp  MouseFuncX.cpp  MouseFuncY.cpp  MouseFuncZ.cpp  NfbcOverdozenMicroperm.cpp  OverdozenMicroperm.cpp  OverdozenPermsolver.cpp  PbcOverdozenMicroperm.cpp  Polynom.cpp  Slau.cpp  StuffedVoxel.cpp  stdafx.cpp  tinyxml.cpp
